--- a/t1.md
+++ b/t1.md
@@ -1,4 +1,146 @@
-t1
+# Build your first WinUI 3 app
+The Windows App SDK decouples APIs and tools from the operating system and offers a modernized UI framework, providing a uniform way to develop beautiful desktop apps on both Windows 11 and Windows 10. This blog will provide you with a high-level understanding of the project structure and a solid starting point to build some familiarity with using WinAppSDK. In this blog series, we will cover how to create your first Windows app that uses WinUI 3 and the Windows App SDK (WinAppSDK). 
 
-t2
+## Sample app overview
+We are going to build an app with buttons that produce drum sounds (DrumPad). As simple as this demo app is, it shows some cool things you can do right away with WinAppSDK:
+•	Working with simple and easy-to-use UI controls from Windows UI Library (WinUI) 3
+•	Customizing windowing options so that the user can multitask with the app always on top or have a full immersive experience 
+•	Making the app single-instanced to reduce synchronization issues between instances 
+
+## Prerequisites 
+•	Install tools for developing apps for Windows 10 and Windows 11 here
+•	Create a WinUI 3 app that uses the Windows App SDK here
+Optional: If you are completely new to Windows development, we recommend taking a C# crash course to familiarize yourself with the syntax and basic concepts.
+
+## Project template structure
+In this project template, code is broken down into two main parts: App.xaml and MainWindow.xaml. Most of our code will live in MainWindow.xaml and MainWindow.xaml.cs.
+•	MainWindow.xaml: this is a XAML file where we will define all of our UI elements, called “controls”, that will make up the visual layer of our application.
+•	MainWindow.xaml.cs: This is the C# code-behind file where we will put all the logic that lets us interact with our application.
+
+## UI layout design & implementation
+The following WinUI 3 controls are used to represent components of a drum pad:
+•	DropDownButton: includes a chevron to indicate a menu can be opened
+•	ToggleSwitch: a switch that can be toggled between dark/light mode
+•	Button: has a click user interaction and will trigger a unique drum sound
+•	Grid: made of rows and columns and is used to position the other controls
+  
+
+1.	In Visual Studio, select File -> New -> Project
+2.	In the project drop-down filters, select C#, Windows, and WinUI, respectively
+3.	Choose the Blank App, Packaged (WinUI 3 in Desktop) template, and name it DrumPad
+4.	Choose the target platform for your device (here we use x64).
+5.	Delete the following code that comes with the template in MainWindow.xaml and MainWindow.xaml.cs respectively:
+```xml
+<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+    <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
+</StackPanel>
+```
+
+
+```csharp
+private void myButton_Click(object sender, RoutedEventArgs e)
+{
+    myButton.Content = "Clicked";
+}
+```
+
+
+6.	Add all 3 Grids and specify how their inner controls should be aligned and positioned
+```xml
+<Grid>
+    <Grid.RowDefinitions>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="*"/>
+    </Grid.RowDefinitions>
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+    </Grid>
+    
+    <Grid x:Name="Control1" Grid.Row="1" ColumnSpacing="30" 
+          VerticalAlignment="Center" HorizontalAlignment="Center">
+    </Grid>
+</Grid>
+```
+
+NOTE: * and auto are used to create a dynamic and responsive layout based on how user resizes the app window. See a visual explanation here.
+7.	Add DropDownButton & ToggleSwitch below </Grid.ColumnDefinitions> :
+
+```xml
+<DropDownButton Content="Display" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Width="118" >
+    <DropDownButton.Flyout>
+        <MenuFlyout Placement="Bottom">
+            <MenuFlyoutItem Text="Default"/>
+            <MenuFlyoutItem Text="Compact Overlay"/>
+            <MenuFlyoutItem Text="Fullscreen"/>
+        </MenuFlyout>
+    </DropDownButton.Flyout>
+</DropDownButton>
+<ToggleSwitch AutomationProperties.Name="simple ToggleSwitch" x:Name="dark_switch" Grid.Column="1" CornerRadius="3" 
+VerticalAlignment="Center"  HorizontalAlignment="Right" 
+MinWidth="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
+```
+
+
+
+8.	Add Buttons inside the bottom grid:
+```xml
+<Button Background="#EC3939" Grid.Row="0" Grid.Column="0" />
+<Button Background="#C4425A" Grid.Row="0" Grid.Column="1" />
+<Button Background="#D41DD8" Grid.Row="0" Grid.Column="2" />
+
+<Button Background="#C4425A" Grid.Row="1" Grid.Column="0" />
+<Button Background="#D41DD8" Grid.Row="1" Grid.Column="1" />
+<Button Background="#6A21A3" Grid.Row="1" Grid.Column="2" />
+
+<Button Background="#D41DD8" Grid.Row="2" Grid.Column="0" />
+<Button Background="#6A21A3" Grid.Row="2" Grid.Column="1" />
+<Button Background="#473DB8" Grid.Row="2" Grid.Column="2" />
+```
+
+9.	Styling buttons inside the bottom grid
+
+```xml
+<Grid x:Name="Control1" Grid.Row="1" ColumnSpacing="30" 
+      VerticalAlignment="Center" HorizontalAlignment="Center">
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+    </Grid.ColumnDefinitions>
+    
+    <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
+</Grid>
+```
+
+
+10.	Define standardized styling that applies to all the buttons in the grid. We can use the Grid.Resources tag to style the buttons inside the grid and add the following code in the same level of the <Grid.RowDefinitions> tag:
+```xml
+<Grid.Resources>
+    <Style TargetType="Button">
+        <Setter Property="HorizontalAlignment" Value="Stretch" />
+        <Setter Property="VerticalAlignment" Value="Stretch" />
+        <Setter Property="CornerRadius" Value="5" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="FontSize" Value="36" />
+    </Style>
+</Grid.Resources>
+```
+
+
+
+## Wrapping up
+As simple as that, we should have a working visual layer built out using WinUI 3 controls. Next, we will dive into implementing the business logic. The code used in this blog is on my GitHub for your reference.
+
+
+
 
