--- a/t1.md
+++ b/t1.md
@@ -3,39 +3,47 @@ The Windows App SDK decouples APIs and tools from the operating system and offer
 
 ## Sample app overview
 We are going to build an app with buttons that produce drum sounds (DrumPad). As simple as this demo app is, it shows some cool things you can do right away with WinAppSDK:
-•	Working with simple and easy-to-use UI controls from Windows UI Library (WinUI) 3
-•	Customizing windowing options so that the user can multitask with the app always on top or have a full immersive experience 
-•	Making the app single-instanced to reduce synchronization issues between instances 
+* Working with simple and easy-to-use UI controls from Windows UI Library (WinUI) 3
+* Customizing windowing options so that the user can multitask with the app always on top or have a full immersive experience 
+* Making the app single-instanced to reduce synchronization issues between instances 
+
 
 ## Prerequisites 
-•	Install tools for developing apps for Windows 10 and Windows 11 here
-•	Create a WinUI 3 app that uses the Windows App SDK here
-Optional: If you are completely new to Windows development, we recommend taking a C# crash course to familiarize yourself with the syntax and basic concepts.
+1. Install tools for developing apps for Windows 10 and Windows 11 here
+2. Create a WinUI 3 app that uses the Windows App SDK here
+
+> **Optional**: If you are completely new to Windows development, we recommend taking a C# crash course to familiarize yourself with the syntax and basic concepts.
 
 ## Project template structure
 In this project template, code is broken down into two main parts: App.xaml and MainWindow.xaml. Most of our code will live in MainWindow.xaml and MainWindow.xaml.cs.
-•	MainWindow.xaml: this is a XAML file where we will define all of our UI elements, called “controls”, that will make up the visual layer of our application.
-•	MainWindow.xaml.cs: This is the C# code-behind file where we will put all the logic that lets us interact with our application.
+* MainWindow.xaml: this is a XAML file where we will define all of our UI elements, called “controls”, that will make up the visual layer of our application.
+* MainWindow.xaml.cs: This is the C# code-behind file where we will put all the logic that lets us interact with our application.
 
-## UI layout design & implementation
+
+## UI layout design
 The following WinUI 3 controls are used to represent components of a drum pad:
-•	DropDownButton: includes a chevron to indicate a menu can be opened
-•	ToggleSwitch: a switch that can be toggled between dark/light mode
-•	Button: has a click user interaction and will trigger a unique drum sound
-•	Grid: made of rows and columns and is used to position the other controls
-  
+* [DropDownButton](https://docs.microsoft.com/en-us/windows/winui/api/microsoft.ui.xaml.controls.dropdownbutton?view=winui-3.0): includes a chevron to indicate a menu can be opened
+* [ToggleSwitch](https://docs.microsoft.com/en-us/windows/winui/api/microsoft.ui.xaml.controls.toggleswitch?view=winui-3.0): a switch that can be toggled between dark/light mode
+* [Button](https://docs.microsoft.com/en-us/windows/winui/api/microsoft.ui.xaml.controls.button?view=winui-3.0): has a click user interaction and will trigger a unique drum sound
+* [Grid](https://docs.microsoft.com/en-us/windows/winui/api/microsoft.ui.xaml.controls.grid?view=winui-3.0): made of rows and columns and is used to position the other controls
 
-1.	In Visual Studio, select File -> New -> Project
-2.	In the project drop-down filters, select C#, Windows, and WinUI, respectively
-3.	Choose the Blank App, Packaged (WinUI 3 in Desktop) template, and name it DrumPad
-4.	Choose the target platform for your device (here we use x64).
-5.	Delete the following code that comes with the template in MainWindow.xaml and MainWindow.xaml.cs respectively:
+
+  ![](Group%20116%20(3).png)
+
+## UI layout implementation
+1.	In Visual Studio, select **File** -> **New** -> **Project**
+2.	In the project drop-down filters, select **C#**, **Windows**, and **WinUI**, respectively
+3.	Select the Blank App, Packaged (WinUI 3 in Desktop) template, and name it **DrumPad**
+4.	Choose the target platform for your device (here we use **x64**)
+5.	Delete the following code that comes with the template in **MainWindow.xaml** and **MainWindow.xaml.cs** respectively
+
+##### MainWindow.xaml:
 ```xml
 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
     <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
 </StackPanel>
 ```
-
+##### MainWindow.xaml.cs:
 
 ```csharp
 private void myButton_Click(object sender, RoutedEventArgs e)
@@ -44,6 +52,7 @@ private void myButton_Click(object sender, RoutedEventArgs e)
 }
 ```
 
+> **NOTE**: From this point on, all the code below lives in **MainWindow.xaml**
 
 6.	Add all 3 Grids and specify how their inner controls should be aligned and positioned
 ```xml
@@ -66,7 +75,8 @@ private void myButton_Click(object sender, RoutedEventArgs e)
 </Grid>
 ```
 
-NOTE: * and auto are used to create a dynamic and responsive layout based on how user resizes the app window. See a visual explanation here.
+> **NOTE**: Auto and * are used to create a dynamic and responsive layout based on how user resizes the app window. See a visual explanation here.
+
 7.	Add DropDownButton & ToggleSwitch below </Grid.ColumnDefinitions> :
 
 ```xml
@@ -136,10 +146,14 @@ MinWidth="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Cente
 </Grid.Resources>
 ```
 
+## Result
+As simple as that, we should have a working visual layer built out using WinUI 3 controls: 
 
+
+![](image%203%20(2).png)
 
 ## Wrapping up
-As simple as that, we should have a working visual layer built out using WinUI 3 controls. Next, we will dive into implementing the business logic. The code used in this blog is on my GitHub for your reference.
+Next, we will dive into implementing the business logic. The code used in this blog is on my GitHub for your reference.
 
 
 
