updated visuals t1.md

--- a/t1.md
+++ b/t1.md
@@ -31,7 +31,7 @@ The following WinUI 3 controls are used to represent components of a drum pad:
 * [Grid](https://docs.microsoft.com/en-us/windows/winui/api/microsoft.ui.xaml.controls.grid?view=winui-3.0): made of rows and columns and is used to position the other controls
 
 
->   ![](Group%20116%20(3).png)
+![](Group%20123.png)
 
 ## UI layout implementation
 1.	In Visual Studio, select **Create a new project**
