adding github link

--- a/t1.md
+++ b/t1.md
@@ -9,7 +9,7 @@ We are going to build an app with buttons that produce drum sounds (DrumPad). As
 * Customizing windowing options so that the user can multitask with the app always on top or have a full immersive experience 
 * Making the app single-instanced to reduce synchronization issues between instances 
 
-**This blog is dedicated to showing you how to use WinUI 3 controls to create a simple working user interface.** I'll leave windowing and single instancing for the following two blogs. I've posted the code used in this blog on GitHub for your reference.
+**This blog is dedicated to showing you how to use WinUI 3 controls to create a simple working user interface.** I'll leave windowing and single instancing for the following two blogs. I've posted the code used in this blog on [GitHub](https://github.com/jingwei-a-zhang/WinAppSDK-DrumPad/tree/b748f19d15fd7b3df10e24ebf5bb6a03bec6ada7) for your reference.
 
 ## Prerequisites 
 1. Install tools for developing apps for Windows 10 and Windows 11 [here](https://docs.microsoft.com/en-us/windows/apps/windows-app-sdk/set-up-your-development-environment?tabs=vs-2022).
@@ -162,6 +162,6 @@ As simple as that, we should have a working visual layer built out using WinUI 3
 ![](image%204%20(1).png)
 
 ## Wrapping up
-Next, we will dive into implementing the business logic. The code used in this blog is on my GitHub for your reference.
+Next, we will dive into implementing the business logic. Check out my [GitHub](https://github.com/jingwei-a-zhang/WinAppSDK-DrumPad/tree/b748f19d15fd7b3df10e24ebf5bb6a03bec6ada7) for the code used in this blog.
 
   [1]: image%203%20(2).png
