--- a/t2.md
+++ b/t2.md
@@ -53,6 +53,66 @@ private void pad_clicked(object sender, RoutedEventArgs e)
 
 Repeat step 4 and 5 to attach another sound clip to a different button until all the buttons have a click action! For your reference, check out my MainWindow.xaml.cs and MainWindow.xaml on GitGub.
 
+## Implement dark mode
+The dark mode is an app appearance where the content is laid out on a dark background. It gives the app a different aesthetic look and can improve readability, especially in a low-light environment.
+
+1.	Define SolidColorBrush under the light and dark themes, respectively: 
+
+##### App.xaml:
+```xml
+<ResourceDictionary.ThemeDictionaries>
+    <ResourceDictionary x:Key="Light">
+        <SolidColorBrush x:Key="HomePageBackgroundBrush" Color="Transparent"/>
+    </ResourceDictionary>
+    <ResourceDictionary x:Key="Dark">
+        <SolidColorBrush x:Key="HomePageBackgroundBrush" Color="Black"/>
+    </ResourceDictionary>
+</ResourceDictionary.ThemeDictionaries>
+```
+
+
+2.	Indicate which theme to use via the **Background** parameter (here we specified it on the outermost Grid in MainWindow.xaml): 
+
+##### MainWindow.xaml:
+```xml
+<Grid Background="{ThemeResource HomePageBackgroundBrush}">
+```
+
+3.	Define the action for ToggleSwitch:
+
+##### MainWinow.xaml.cs:
+```csharp
+private void ToggleSwitch_Toggled(object sender, RoutedEventArgs e)
+{
+    ToggleSwitch toggleSwitch = sender as ToggleSwitch;
+    if (toggleSwitch != null)
+    {
+        if (toggleSwitch.IsOn == true)
+        {
+            if (this.Content is FrameworkElement frameworkElement)
+            {
+                frameworkElement.RequestedTheme = ElementTheme.Dark;
+            }
+        }
+        else
+        {
+            if (this.Content is FrameworkElement frameworkElement)
+            {
+                frameworkElement.RequestedTheme = ElementTheme.Light;
+            }
+        }
+    }
+}
+```
+
+4.	Link the call-back function above to the ToggleSwitch control:
+
+##### MainWindow.xaml:
+```xml
+<ToggleSwitch … … Toggled="ToggleSwitch_Toggled" />
+```
+
+
 
 ## Managing window display
 Using the Windowing features in WinAppSDK provides a lot of flexibility and customization to your app experience. One of these customization features is the ability to change the Presenter mode of your window. There are 3 presenters you can use: Compact  Overlay, Fullscreen, and Overlapped mode, with overlapped being the default presenter.   
@@ -106,6 +166,16 @@ private void SwitchPresenter(object sender, RoutedEventArgs e)
 <MenuFlyoutItem Text="Compact Overlay" Click="SwitchPresenter"/>
 ```
 
-Just like that, you can see how we can leverage the amazing Windowing features to customize windowing options for your app. Repeat the same steps to implement the Fullscreen mode. Now you can use WinAppSDK to your advantage to create beautiful, complex, and fully-featured apps. To learn more about Windowing, see Manage app windows for additional information on what you can do with this feature. 
+> **NOTE**: You can save the state of the theme resource and persist the option the user chose at the next time of app startup with three easy steps. Follow this blog post to implement this functionality. 
 
-See my code here
+## Results
+<p align="center">
+    <video width="820" height="550" controls>
+      <source src="Media1.mp4" type="video/mp4">
+    </video>
+</p>
+
+Just like that, you can see how we can leverage the amazing Windowing features to customize windowing options for your app. Repeat the same step 5 and 6 to implement the Fullscreen and Overlapped (the default) presenters. To learn more about Windowing, see Manage app windows for additional information on what you can do with this feature. 
+
+## Wrapping up
+Next, we will keep evolving the app with app single-instancing. Here is my GitHub for your reference.
