updating t2 header and video

--- a/t2.md
+++ b/t2.md
@@ -1,4 +1,4 @@
-# Sound Playing & Windowing
+# Adding event handlers: Sounds, Dark Mode & Windowing
 Note that the code from the previous blog implements the visual layer of the DrumPad using WinUI 3 controls. However, if you click on any buttons, nothing happens, because we have not defined any actions, which we will do in this blog. In this blog, you will be guided to accomplish the following: 
 * Play a sound when a drum pad button is clicked
 * Switch into dark mode when the toggle switch is turned on
@@ -170,7 +170,7 @@ private void SwitchPresenter(object sender, RoutedEventArgs e)
 
 ## Results
 <p align="center">
-    <video width="820" height="550" controls>
+    <video width="550" height="550" controls>
       <source src="Media1.mp4" type="video/mp4">
     </video>
 </p>
